--- a/www/template/register.html
+++ b/www/template/register.html
@@ -4,24 +4,23 @@
 -->
 <!--<ion-view view-title="{{title}}">-->
 <ion-view view-title="注册">
-  <ion-content>
     <ion-list>
       <form name="register_form">
         <label class="item item-input item-stacked-label">
 
           <span class="input-label">昵称</span>
-          <input type="text" placeholder="John" ng-model="nickname" required>
+          <input type="text" placeholder="John" ng-model="userInfo.nickname" required>
         </label>
 
         <label class="item item-input">
           <i class="icon ion-search placeholder-icon"></i>
           <!--<span class="input-label"></span>-->
-          <input type="text" placeholder="用户名" ng-model="username" required/>
+          <input type="text" placeholder="用户名" ng-model="userInfo.username" required/>
         </label>
 
         <div class="item item-input-inset">
           <label class="item-input-wrapper">
-            <input type="text" placeholder="手机号">
+            <input type="text" placeholder="手机号" ng-model="phone">
           </label>
           <button class="button button-small">
             获取验证码
@@ -30,12 +29,12 @@
 
         <label class="item item-input">
           <!--<span class="input-label"></span>-->
-          <input type="password" placeholder="密码" ng-model="password" required/>
+          <input type="password" placeholder="密码" ng-model="userInfo.password" required/>
         </label>
         <label class="item item-input">
           <!--<span class="input-label"></span>-->
           <input type="password" name="confirm_password" ng-model="confirm_password" placeholder="密码"
-                 ui-validate=" '$value==password'" required/>
+                 ui-validate=" '$value==userInfo.password'" required/>
         </label>
         <li class="item item-checkbox">
           <label class="checkbox">
@@ -49,5 +48,4 @@
         </button>
       </form>
     </ion-list>
-  </ion-content>
 </ion-view>
